--- a/4-tiposDatos/index.html
+++ b/4-tiposDatos/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Tipos de datos</h1>
-    <p>Las variables y constentes pueden tener como valor</p>
+    <p>Las variables y constentes pueden tener como valor de continete </p>
     <ul>
         <li>Cadenas de textos</li>
         <li>Números</li>
